@@ -1,7 +1,7 @@
 #! /usr/bin/env python2
 #
 # This file is part of khmer, http://github.com/ged-lab/khmer/, and is
-# Copyright (C) Michigan State University, 2009-2013. It is licensed under
+# Copyright (C) Michigan State University, 2009-2014. It is licensed under
 # the three-clause BSD license; see doc/LICENSE.txt.
 # Contact: khmer-project@idyll.org
 #
@@ -121,7 +121,7 @@ def main():
 
             # build the alignment...
             score, graph_alignment, read_alignment, truncated = \
-                   aligner.align(read.sequence)
+                aligner.align(read.sequence)
 
             # next, decide whether or to keep it.
             output_corrected = False
@@ -177,7 +177,7 @@ def main():
 
             # build the alignment...
             score, graph_alignment, read_alignment, truncated = \
-                   aligner.align(read.sequence)
+                aligner.align(read.sequence)
 
             if truncated:               # no good alignment; output original
                 corrected = read.sequence
